Port to 1.17-1.18.2