@@ -1,14 +1,16 @@
 package ca.modmonster.minegit.widget;
 
 import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.TextComponent;
+import net.minecraft.network.chat.TranslatableComponent;
 
 import java.util.Arrays;
 import java.util.List;
 
 public enum WorldSyncButtonState {
-    SETUP(Component.literal("☁"), List.of(Component.translatable("minegit.link.setup"))),
-    ENABLE(Component.literal("☁"), Arrays.asList(Component.translatable("minegit.sync.enable"), Component.translatable("minegit.sync.alt_configure"))),
-    WORLD_CONFIGURE(Component.literal("✔"), Arrays.asList(Component.translatable("minegit.sync.enabled"), Component.translatable("minegit.sync.alt_configure")));
+    SETUP(new TextComponent("☁"), List.of(new TranslatableComponent("minegit.link.setup"))),
+    ENABLE(new TextComponent("☁"), Arrays.asList(new TranslatableComponent("minegit.sync.enable"), new TranslatableComponent("minegit.sync.alt_configure"))),
+    WORLD_CONFIGURE(new TextComponent("✔"), Arrays.asList(new TranslatableComponent("minegit.sync.enabled"), new TranslatableComponent("minegit.sync.alt_configure")));
 
     public final Component message;
     public final List<Component> tooltip;
